<resources>
    <string name="app_name">HelloWord</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_rb_driving">Driving</string>
    <string name="str_rb_bicycling">BiCycling</string>
    <string name="str_rb_walking">Walking</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="find">Find</string>
    <string name="hint">Enter Place</string>
</resources>
