<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="goFind_click" />

    <EditText
        android:id="@+id/et_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="text"
        android:layout_toLeftOf="@id/btn_show" />

    <TextView
        android:id="@+id/tv_distance_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_tv_distance_time"
        android:layout_above="@+id/rg_modes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="46dp" />

    <RadioGroup
        android:id="@+id/rg_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <RadioButton android:id="@+id/rb_driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_driving"
            android:checked="true" />

        <RadioButton android:id="@+id/rb_bicycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_bicycling" />

        <RadioButton android:id="@+id/rb_walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_rb_walking" />

    </RadioGroup>

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rg_modes"
        android:layout_below="@id/et_place"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_alignRight="@+id/btn_show"
        android:layout_alignEnd="@+id/btn_show"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>